--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -557,7 +557,7 @@
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"Chọn một phương thức khoá mới cho không gian riêng tư?"</string>
     <string name="private_space_auto_lock_title" msgid="8663409382910601261">"Tự động khoá không gian riêng tư"</string>
     <string name="private_space_auto_lock_page_summary" msgid="8679844515655838654">"Bạn có thể tự động khoá không gian riêng tư của mình nếu không sử dụng thiết bị trong một khoảng thời gian"</string>
-    <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Mỗi khi khoá thiết bị"</string>
+    <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Mỗi khi thiết bị khoá"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="1748673030841528649">"Sau 5 phút không hoạt động"</string>
     <string name="private_space_auto_lock_never" msgid="595014527119778873">"Không bao giờ"</string>
     <string name="private_space_hide_title" msgid="8687034008994037610">"Ẩn khi khoá"</string>
