--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -4881,7 +4881,7 @@
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"የግራፊክስ ነጂ አማራጮችን ይጠቀሙ"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"የምሽት ብርሃንን ይጠቀሙ"</string>
     <string name="nfc_main_switch_title" msgid="6295839988954817432">"ኤንኤፍሲን ይጠቀሙ"</string>
-    <string name="adaptive_brightness_main_switch_title" msgid="2681666805191642737">"ተለዋዋጭ ብሩህነትን ይጠቀሙ"</string>
+    <string name="adaptive_brightness_main_switch_title" msgid="2681666805191642737">"ተለማማጅ ብሩህነትን ይጠቀሙ"</string>
     <string name="wifi_calling_main_switch_title" msgid="4070224008346815634">"የWi‑Fi ጥሪ ማድረጊያን ይጠቀሙ"</string>
     <string name="default_see_all_apps_title" msgid="7481113230662612178">"ሁሉንም መተግበሪያዎች ይመልከቱ"</string>
     <string name="smart_forwarding_title" msgid="8368634861971949799">"ብልህ ማስተላለፍ"</string>
