--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -4881,7 +4881,7 @@
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"গ্রাফিক্স ড্রাইভার বিকল্প ব্যবহার করুন"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"নাইট লাইট বিকল্প ব্যবহার করুন"</string>
     <string name="nfc_main_switch_title" msgid="6295839988954817432">"NFC বিকল্প ব্যবহার করুন"</string>
-    <string name="adaptive_brightness_main_switch_title" msgid="2681666805191642737">"\'পরিবেশের আলো অনুযায়ী উজ্জ্বলতা\' ব্যবহার করুন"</string>
+    <string name="adaptive_brightness_main_switch_title" msgid="2681666805191642737">"পরিবেশের আলো অনুযায়ী উজ্জ্বলতা ব্যবহার করুন"</string>
     <string name="wifi_calling_main_switch_title" msgid="4070224008346815634">"Wi-Fi কলিং বিকল্প ব্যবহার করুন"</string>
     <string name="default_see_all_apps_title" msgid="7481113230662612178">"সমস্ত অ্যাপ দেখুন"</string>
     <string name="smart_forwarding_title" msgid="8368634861971949799">"স্মার্ট ফরওয়ার্ডিং"</string>
