--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -3909,7 +3909,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"Рэжым навігацыі"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"2-кнопачная навігацыя"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"Каб пераключыцца на іншую праграму, правядзіце пальцам уверх па кнопцы галоўнага экрана. Каб убачыць усе праграмы, правядзіце яшчэ раз. Каб вярнуцца, націсніце кнопку \"Назад\"."</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"Бяспека і экстранны выклік"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"Фізічная бяспека і экстранныя сітуацыі"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"Экстранны выклік, медыцынская інфармацыя, абвесткі"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"Навігацыя жэстамі"</string>
     <string name="edge_to_edge_navigation_summary" msgid="8497033810637690561">"Каб вярнуцца на Галоўную, правядзіце пальцам па экране знізу ўверх. Каб пераключыцца на іншую праграму, правядзіце пальцам па экране знізу ўверх і затрымайцеся перад тым, як адпусціць. Каб вярнуцца назад, правядзіце пальцам па экране злева направа ці справа налева."</string>
